Flora beginnings