@@ -6,9 +6,9 @@ import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.entity.EntityType;
 import net.minecraft.world.entity.MobCategory;
 import net.minecraft.world.item.SpawnEggItem;
+import net.minecraft.world.level.block.*;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 public class Category {
     final List<CategoryEntry> entries = new ArrayList<>();
@@ -16,7 +16,7 @@ public class Category {
     String tabColor = "#FFFFFF";
     ResourceLocation tabIcon = new ResourceLocation("minecraft:barrier");
     int tabIndex = 0;
-    private List<EntityType<?>> resolvedEntities = new ArrayList<>();
+    private List<Object> resolvedEntries = new ArrayList<>();
 
     public Category(ResourceLocation id) {
         this.id = id;
@@ -38,41 +38,71 @@ public class Category {
         return tabIndex;
     }
 
-    public List<EntityType<?>> getEntities() {
-        return resolvedEntities;
+    public List<Object> getEntries() {
+        return resolvedEntries;
     }
 
-    public void resolveEntities() {
-        Set<EntityType<?>> foundEntities = new LinkedHashSet<>();
+    public void resolveEntries() {
+        Set<Object> foundEntries = new LinkedHashSet<>();
         ModConfig config = ModConfig.get();
 
         for (CategoryEntry entry : entries) {
             if (entry.type == FieldGuideDataManager.EntryType.ENTRY) {
-                BuiltInRegistries.ENTITY_TYPE.getOptional(entry.id).ifPresent(type -> {
-                    if (isValid(type, config)) {
-                        foundEntities.add(type);
+                Optional<EntityType<?>> entityType = BuiltInRegistries.ENTITY_TYPE.getOptional(entry.id);
+                if (entityType.isPresent()) {
+                    if (isValidEntity(entityType.get(), config)) {
+                        foundEntries.add(entityType.get());
                     }
-                });
+                } else {
+                    Optional<Block> block = BuiltInRegistries.BLOCK.getOptional(entry.id);
+                    if (block.isPresent()) {
+                        if (isValidBlock(block.get(), config)) {
+                            foundEntries.add(block.get());
+                        }
+                    }
+                }
             } else if (entry.type == FieldGuideDataManager.EntryType.AUTO_POPULATE) {
-                List<EntityType<?>> autoEntities = getEntitiesForStrategy(entry.strategy);
-                for (EntityType<?> type : autoEntities) {
-                    if (isValid(type, config)) {
-                        foundEntities.add(type);
+                List<Object> autoEntries = getEntriesForStrategy(entry.strategy);
+                for (Object obj : autoEntries) {
+                    if (obj instanceof EntityType<?> type) {
+                        if (isValidEntity(type, config)) foundEntries.add(type);
+                    } else if (obj instanceof Block block) {
+                        if (isValidBlock(block, config)) foundEntries.add(block);
                     }
                 }
             }
         }
-        this.resolvedEntities = new ArrayList<>(foundEntities);
+        this.resolvedEntries = new ArrayList<>(foundEntries);
     }
 
-    private boolean isValid(EntityType<?> type, ModConfig config) {
+    private boolean isValidEntity(EntityType<?> type, ModConfig config) {
         ResourceLocation id = BuiltInRegistries.ENTITY_TYPE.getKey(type);
         return type.canSummon() && !config.isEntityBlacklisted(id);
     }
 
-    private List<EntityType<?>> getEntitiesForStrategy(String strategy) {
+    private boolean isValidBlock(Block block, ModConfig config) {
+        ResourceLocation id = BuiltInRegistries.BLOCK.getKey(block);
+        return !config.isEntityBlacklisted(id);
+    }
 
-        return BuiltInRegistries.ENTITY_TYPE.stream()
+    private List<Object> getEntriesForStrategy(String strategy) {
+        List<Object> results = new ArrayList<>();
+
+        if ("flora".equalsIgnoreCase(strategy)) {
+            results.addAll(BuiltInRegistries.BLOCK.stream()
+                    .filter(block -> block instanceof BushBlock ||
+                            block instanceof LeavesBlock ||
+                            block instanceof VineBlock ||
+                            block instanceof CactusBlock ||
+                            block instanceof SugarCaneBlock ||
+                            block instanceof WaterlilyBlock ||
+                            block instanceof StemBlock)
+                    .sorted(Comparator.comparing(block -> BuiltInRegistries.BLOCK.getKey(block).toString()))
+                    .toList());
+            return results;
+        }
+
+        results.addAll(BuiltInRegistries.ENTITY_TYPE.stream()
                 .filter(type -> {
                     if ("hostile".equalsIgnoreCase(strategy)) {
                         return type.getCategory() == MobCategory.MONSTER;
@@ -88,6 +118,8 @@ public class Category {
                     return false;
                 })
                 .sorted(Comparator.comparing(type -> BuiltInRegistries.ENTITY_TYPE.getKey(type).toString()))
-                .collect(Collectors.toList());
+                .toList());
+
+        return results;
     }
 }
